--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,16 @@
 </servlet>
   <servlet-mapping>
     <servlet-name>DispatcherServlet</servlet-name>
-    <url-pattern>/registration</url-pattern>
+    <url-pattern>/app/*</url-pattern>
   </servlet-mapping>
+
+<filter>
+  <filter-name>StaticResourceFilter</filter-name>
+  <filter-class>com.project.filter.StaticResourceFilter</filter-class>
+</filter>
+  <filter-mapping>
+    <filter-name>StaticResourceFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
 </web-app>
